2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-xsmp-client.c: (xsmp_get_discard_command):
	uncomment
	(xsmp_save): when saving the xsmp client to a desktop file, also save
	the discard command since we'll want to use it at some point when
	discarding the saved app.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-manager.c: (cancel_end_session): ignore this if
	we're not in a relevant phase. Also make sure the inhibit dialog is
	destroyed before removing inhibitors (which would activate the
	inhibit dialog)

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-util.c: (ensure_dir_exists): create the dir with
	permission 0755.
	(gsm_util_get_saved_session_dir): use ~/.config instead of ~/.gnome2.
	It's a good time to start using the xdg folders before we actually
	start putting data.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: (update_dialog_text): fix debug
	string
	* gnome-session/gsm-manager.c: (cancel_end_session): add debug string
	(gsm_manager_shutdown): fix debug string

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: (add_inhibitor): use
	gsm_util_get_desktop_dirs() instead of just gsm_util_get_app_dirs().
	Also try to handle desktop filenames that are an absolute path the best
	way possible (this happens with OpenOffice.org).
	* gnome-session/gsm-util.[ch]: (gsm_util_get_desktop_dirs): new
	function, to return all the directories where we look up for the
	desktop files.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: (add_inhibitor): handle NULL
	errors instead of crashing, which can happen in some cases in
	EggDesktopFile.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: use a 32x32 icon size for icons,
	looks better this way.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	Let all processes cleanly exit on exit.
